<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:textAlignment="center"
    android:textDirection="ltr"
    tools:context=".InputActivity">

    <Button
        android:id="@+id/cam_button"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="621dp"
        android:backgroundTint="@color/design_default_color_error"
        android:padding="12dp"
        android:text="@string/enter_with_camera" />

    <Spinner
        android:id="@+id/choose_meal_manual"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:entries="@array/meal_of_day"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_weight_manual"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="510dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_calories"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="440dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/calories"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_carbs"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="370dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/carbs"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_fiber"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/fiber"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_protein"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="230dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/protein"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_sodium"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/sodium"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:padding="12dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/food_record_title"
        android:layout_width="221dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="566dp"
        android:background="@drawable/bubble"
        android:backgroundTint="#00CAC111"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:paddingTop="7dp"
        android:text="or enter manually below"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

</RelativeLayout>