<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:textAlignment="center"
    android:textDirection="ltr"
    tools:context=".MainCamera">

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="221dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="580dp"
        android:background="@drawable/bubble"
        android:backgroundTint="#00CAC111"
        android:fontFamily="@font/dosis_semibold"
        android:paddingTop="7dp"
        android:textSize="18sp"
        android:text="enter your current weight"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/food_record_title"
        android:layout_width="221dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="450dp"
        android:background="@drawable/bubble"
        android:backgroundTint="#00CAC111"
        android:fontFamily="@font/dosis_semibold"
        android:paddingTop="7dp"
        android:text="please enter the following for each meal item"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/enter_servings"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="310dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/servings"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enter_weight"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="510dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:ems="10"
        android:fontFamily="@font/dosis_semibold"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/choose_meal"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/bubble"
        android:backgroundTint="@android:color/holo_green_light"
        android:entries="@array/meal_of_day"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cam_button_2"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/design_default_color_error"
        android:padding="12dp"
        android:text="@string/open_camera" />

</RelativeLayout>
